# numpde

./: README.md
series0_handout/2d-poissonlFEM/: CMakeLists.txt  README.txt  coordinate_transform.hpp  dirichlet_boundary.hpp  fem2d.cpp  fem_solve.hpp  grad_shape.hpp  integrate.hpp  load_vector.hpp  load_vector_assembly.hpp  plot_on_mesh.py  shape.hpp  stiffness_matrix.hpp  stiffness_matrix_assembly.hpp  writer.hpp
series0_handout/2d-poissonlFEM/unittest/: CMakeLists.txt  IntegrationTest.cpp  TestAssembleLoadVector.cpp  TestAssembleStiffnessMatrix.cpp  TestCoordinateTransform.cpp  TestDirichletBoundary.cpp  TestElementVector.cpp  TestGradientShapeFunction.cpp  TestShapeFunction.cpp  TestStiffnessMatrix.cpp
series0_handout/linear-transp-1d/: CMakeLists.txt  README.txt  linear_transport.cpp  sol_movie.py  writer.hpp
series0_handout/linear-transp-1d/cmake/: CommonHeader.cmake  Compiler.cmake  GetEigen.cmake  PackageFind.cmake  warning_flags.cmake
series1_handout/fvm_scalar_1d/: CMakeLists.txt  README.md  config.json  plot.py
series1_handout/fvm_scalar_1d/include/ancse/: boundary_condition.hpp  cfl_condition.hpp  config.hpp  fvm_rate_of_change.hpp  grid.hpp  model.hpp  numerical_flux.hpp  rate_of_change.hpp  reconstruction.hpp  runge_kutta.hpp  simulation_time.hpp  snapshot_writer.hpp  time_loop.hpp
series1_handout/fvm_scalar_1d/src/: CMakeLists.txt  fvm_scalar.cpp
series1_handout/fvm_scalar_1d/src/ancse/: CMakeLists.txt  boundary_condition.cpp  cfl_condition.cpp  config.cpp  fvm_rate_of_change.cpp  grid.cpp  model.cpp  runge_kutta.cpp  snapshot_writer.cpp  time_loop.cpp
series1_handout/fvm_scalar_1d/tests/: CMakeLists.txt  test_boundary_condition.cpp  test_cfl_condition.cpp  test_numerical_flux.cpp  test_reconstruction.cpp
series1_handout/linear-transp-2d/: CMakeLists.txt  config.json  linear_transport.cpp  plot_init.py  sol_movie.py  writer.hpp
series2_handout/hyp_sys_1d/config_files/: euler_fvm_sod_shock_tube.json
series2_handout/hyp_sys_1d/include/ancse/: cfl_condition.hpp  dg_handler.hpp  dg_rate_of_change.hpp  fvm_rate_of_change.hpp  grid.hpp  model.hpp  numerical_flux.hpp  polynomial_basis.hpp  rate_of_change.hpp  reconstruction.hpp  runge_kutta.hpp  simulation_time.hpp
series2_handout/hyp_sys_1d/src/: dg_burgers.cpp  dg_euler.cpp
series2_handout/hyp_sys_1d/src/ancse/: cfl_condition.cpp  dg_handler.cpp  dg_rate_of_change.cpp  fvm_rate_of_change.cpp  grid.cpp  model.cpp  polynomial_basis.cpp  runge_kutta.cpp  time_loop.cpp
series2_handout/hyp_sys_1d/tests/: CMakeLists.txt  test_cfl_condition.cpp  test_grid.cpp  test_model.cpp  test_numerical_flux.cpp  test_poly.cpp  test_reconstruction.cpp  test_rk.cpp
series2_handout/unstructured_euler/: cfl_condition.hpp  hllc.hpp  numerical_flux.hpp
